--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.NontonKuy">
+        <activity android:name=".ui.DetailActivity"/>
         <activity
             android:name=".ui.SplashScreenActivity"
-            android:theme="@style/Theme.NoWindowStatus">
+            android:theme="@style/Theme.NoWindowStatus"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
